[gd_scene load_steps=9 format=3 uid="uid://c7pmqtaeidvhw"]

[ext_resource type="Theme" uid="uid://bwqig88kcvpte" path="res://assets/GUI/gui_default_theme.tres" id="1_2jnla"]
[ext_resource type="Script" path="res://scripts/UI/main_menu.gd" id="1_35u0x"]
[ext_resource type="Texture2D" uid="uid://dgxw7nltmfo60" path="res://assets/Background/Simple/Forest_1.png" id="2_rbqyo"]
[ext_resource type="Texture2D" uid="uid://b5t86x0g7yx8v" path="res://assets/GUI/GUI_Rect.png" id="2_wfxtv"]
[ext_resource type="FontFile" uid="uid://ybic0uytbk8e" path="res://assets/GUI/FsSongarak1Regular.ttf" id="4_ytkxx"]
[ext_resource type="PackedScene" uid="uid://b3xbqylvxq7p4" path="res://scenes/UI/options_menu.tscn" id="6_60vy2"]
[ext_resource type="AudioStream" uid="uid://be1ikmdisht0w" path="res://audio/music/Origins.ogg" id="7_jgi32"]
[ext_resource type="PackedScene" uid="uid://drojvckwbebyw" path="res://scenes/UI/authors.tscn" id="7_oyrww"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35u0x")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Panel"]
clip_contents = true
custom_minimum_size = Vector2(1280, 768)
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1536.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_rbqyo")

[node name="Logo" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -245.0
offset_right = 260.0
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Logo"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Logo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("4_ytkxx")
theme_override_font_sizes/font_size = 60
text = "Легенда о 4 сезонах"
horizontal_alignment = 1

[node name="Menu" type="MarginContainer" parent="Panel"]
process_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -175.0
offset_right = 150.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuFrame" type="TextureRect" parent="Panel/Menu"]
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_wfxtv")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="New" type="Button" parent="Panel/Menu/VBoxContainer" groups=["main_menu_buttons"]]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Load")
focus_next = NodePath("../Load")
focus_previous = NodePath("../Exit")
theme = ExtResource("1_2jnla")
text = "Новая игра"

[node name="Load" type="Button" parent="Panel/Menu/VBoxContainer" groups=["main_menu_buttons"]]
layout_mode = 2
theme = ExtResource("1_2jnla")
text = "Продолжить"

[node name="Options" type="Button" parent="Panel/Menu/VBoxContainer" groups=["main_menu_buttons"]]
layout_mode = 2
theme = ExtResource("1_2jnla")
text = "Настройки"

[node name="Credits" type="Button" parent="Panel/Menu/VBoxContainer" groups=["main_menu_buttons"]]
layout_mode = 2
theme = ExtResource("1_2jnla")
text = "Авторы"

[node name="Exit" type="Button" parent="Panel/Menu/VBoxContainer" groups=["main_menu_buttons"]]
layout_mode = 2
focus_neighbor_top = NodePath("../Credits")
focus_neighbor_bottom = NodePath("../New")
focus_next = NodePath("../New")
focus_previous = NodePath("../Credits")
theme = ExtResource("1_2jnla")
text = "Выход"

[node name="Options_menu" parent="Panel" instance=ExtResource("6_60vy2")]
visible = false
layout_mode = 2
anchors_preset = 0

[node name="Authors" parent="Panel" instance=ExtResource("7_oyrww")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jgi32")
autoplay = true
bus = &"Music"

[connection signal="mouse_entered" from="Panel/Menu/VBoxContainer/New" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Menu/VBoxContainer/New" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Panel/Menu/VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="mouse_entered" from="Panel/Menu/VBoxContainer/Load" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Menu/VBoxContainer/Load" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Panel/Menu/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="mouse_entered" from="Panel/Menu/VBoxContainer/Options" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Menu/VBoxContainer/Options" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Panel/Menu/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Panel/Menu/VBoxContainer/Credits" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Menu/VBoxContainer/Credits" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Panel/Menu/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="Panel/Menu/VBoxContainer/Exit" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Menu/VBoxContainer/Exit" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Panel/Menu/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="exit_options_menu" from="Panel/Options_menu" to="." method="_on_options_menu_exit_options_menu"]
